--- a/5-guia/ejercicios-5/ej-12-5.tex
+++ b/5-guia/ejercicios-5/ej-12-5.tex
@@ -47,7 +47,7 @@
         $$
         La \textit{buena} es que el sistema es compatible, dado que no tenemos restos distintos
         para un mismo cálculo. La cosa es ahora \textit{¿cuáles agarro?}.
-        Hay que pensar que queremos divisores \textit{coprimos} y tener soluciones de más.
+        Hay que pensar que queremos divisores \textit{coprimos} y y no tener soluciones de más.
         Esto último de \textit{no tener soluciones de más} es la razón por la cual nos quedamos con
         $\congruencia{a}{5}{8}$ y no con $\congruencia{a}{1}{2}$, porque en lo que a \textit{coprimisidad} respecta
         nada cambia, pero hay muchas soluciones de $\congruencia{a}{1}{2}$ que no están en $\congruencia{a}{5}{8}$.
