--- a/5-guia/ejercicios-5/ej-17-5.tex
+++ b/5-guia/ejercicios-5/ej-17-5.tex
@@ -1,15 +1,17 @@
 \begin{enunciado}{\ejercicio}
   Probar que para todo $a\en \enteros$ vale
   \begin{multicols}{2}
-    \begin{enumerate}[label=\roman*)]
+    \begin{enumerate}[label=\alph*)]
       \item $728 \divideA a^{27} - a^3$
       \item $\frac{2a^7}{35} + \frac{a}{7} - \frac{a^3}{5}  \en \enteros$
     \end{enumerate}
   \end{multicols}
 \end{enunciado}
 
-\begin{enumerate}[label=\roman*)]
-  \item $728 = 2^3 \cdot 7 \cdot 13$ \\
+\begin{enumerate}[label=\alph*)]
+
+  \item
+        $728 = 2^3 \cdot 7 \cdot 13$ \\
         Pruebo congruencia con $2^3$, 7 y 13.\\
         $ 728 \divideA a^{27} - a^3
           \entonces\\
@@ -60,4 +62,9 @@
             \congruencia{a^3 - a^3}{0}{13} \Tilde \\
           }
         $
+  \item \hacer
 \end{enumerate}
+
+\begin{aportes}
+\item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+\end{aportes}
