--- a/5-guia/ejercicios-5/ej-20-5.tex
+++ b/5-guia/ejercicios-5/ej-20-5.tex
@@ -17,12 +17,16 @@
           \congruencia{X}{\sumLocal i^{42}}{56}
         $$
         que será aún más simple si quiebro en la forma:
-        $$\llave{l}{
+        $$
+          \congruencia{X}{\sumLocal i^{42}}{56}
+          \leftrightsquigarrow
+          \llave{l}{
             \congruencia{X}{\sumLocal i^{42}}{7} \llamada1 \\
             \congruencia{X}{\sumLocal i^{42}}{8} \llamada2
           }
         $$
-        Primero estudio $\llamada1$. Acomodo la sumatoria, voy a abrirla y separar
+        Primero estudio $\llamada1$.\par
+        Acomodo la sumatoria, voy a abrirla y separar
         los términos \textit{convenientemente}:
         $$
           \sumLocal i^{42} = 1^{42} + 2^{42} + 3^{42}  + \cdots 1759^{42}
@@ -93,7 +97,7 @@
             7^{42} = (7^2)^{21} \conga8 1^{21} = 1
           }
         $$
-
+        {\tiny Y por alguna razón \textit{matemágica}, la cual no podría importarme menos, los pares dieron 0 y los impares 1. \red{\faIcon{ghost}}}
         $$
           \sumLocal i^{42} \conga8 219 \cdot \bigl(
           \blue{1 + 0 + 1 + 0 + 1 + 0 + 1 +0}\bigr) +
