--- a/5-guia/ejercicios-5/ej-10-5.tex
+++ b/5-guia/ejercicios-5/ej-10-5.tex
@@ -1,42 +1,66 @@
-\ejercicio Hallar, cuando existan, todos los enteros $a$ que satisfacen simultáneamente:\\
+\begin{enunciado}{\ejercicio}
+  Hallar, cuando existan, todos los enteros $a$ que satisfacen simultáneamente:\\
+
+  \begin{enumerate}[label=\roman*)]
+    \begin{multicols}{3}
+      \item
+      $
+        \llave{ll}{
+          \congruencia{a}{3}{10} \\
+          \congruencia{a}{2}{7}  \\
+          \congruencia{a}{5}{9}
+        }
+      $
+      \item
+      $
+        \llave{ll}{
+          \congruencia{a}{1}{6}  \\
+          \congruencia{a}{2}{20} \\
+          \congruencia{a}{3}{9}
+        }
+      $
+
+      \item $
+        \llave{l}{
+          \congruencia{a}{1}{12} \\
+          \congruencia{a}{7}{10} \\
+          \congruencia{a}{4}{9}
+        }
+      $
+    \end{multicols}
+  \end{enumerate}
+
+\end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
-	\item
-	      $
-		      \llave{l}{
-			      \llamada1 \congruencia{a}{3}{10} \\
-			      \llamada2 \congruencia{a}{2}{7} \\
-			      \llamada3 \congruencia{a}{5}{9} \\
-		      }
-	      $\\
-	      El sistema tiene solución dado que 10, 7 y 9 son coprimos dos a dos. Resuelvo:\\
-	      $\flecha{Arranco}[ en $\llamada1$]
-		      a = 10k + 3 \conga{7}
-		      3k + 3 \conga{\llamada2}
-		      2\ (7)
-		      \flecha{usando que}[$3\cop 7$] \congruencia{k}{2}{7}
-		      \to k = 7q + 2.\\
-		      \flecha{actualizo}[$a$]
-		      a = 10 \cdot \ub{(7q + 2)}{k} + 3 = 70 q + 23 \conga9
-		      7q \conga{\llamada3}
-		      5\ (9)
-		      \flecha{usando que}[$7\cop 9$] \congruencia{q}{0}{9}
-		      \to q = 9j\\
-		      \flecha{actualizo}[$a$]
-		      a = 70 \ub{(9j)}{q} + 23 = 680j + 23 \to \boxed{\congruencia{a}{23}{630}} \Tilde
-	      $\\
-                La solución hallada es la que el Teorema \href{\chinito}{chino} del Resto me garantiza que tengo en el
-	      intervalo $[0, 10\cdot 7 \cdot 9)$
+  \item
+        $
+          \llave{ll}{
+            \congruencia{a}{3}{10} & \llamada1 \\
+            \congruencia{a}{2}{7}  & \llamada2 \\
+            \congruencia{a}{5}{9}  & \llamada3 \\
+          }
+        $\\
+        El sistema tiene solución dado que 10, 7 y 9 son coprimos dos a dos. Resuelvo:\\
+        $\flecha{Arranco}[ en $\llamada1$]
+          a = 10k + 3 \conga{7}
+          3k + 3 \conga{\llamada2}
+          2\ (7)
+          \flecha{usando que}[$3\cop 7$] \congruencia{k}{2}{7}
+          \to k = 7q + 2.\\
+          \flecha{actualizo}[$a$]
+          a = 10 \cdot \ub{(7q + 2)}{k} + 3 = 70 q + 23 \conga9
+          7q \conga{\llamada3}
+          5\ (9)
+          \flecha{usando que}[$7\cop 9$] \congruencia{q}{0}{9}
+          \to q = 9j\\
+          \flecha{actualizo}[$a$]
+          a = 70 \ub{(9j)}{q} + 23 = 680j + 23 \to \boxed{\congruencia{a}{23}{630}} \Tilde
+        $\\
+        La solución hallada es la que el Teorema \href{\chinito}{chino} del Resto me garantiza que tengo en el
+        intervalo $[0, 10\cdot 7 \cdot 9)$
 
-	\item
+  \item \hacer
 
-	\item $
-		      \llave{l}{
-			      \llamada1 \congruencia{a}{1}{12} \\
-			      \llamada2 \congruencia{a}{7}{10} \\
-			      \llamada3 \congruencia{a}{4}{9}
-		      }
-	      $
-
-
+  \item \hacer
 \end{enumerate}
