--- a/5-guia/ejercicios-5/ej-17-5.tex
+++ b/5-guia/ejercicios-5/ej-17-5.tex
@@ -9,62 +9,143 @@
 \end{enunciado}
 
 \begin{enumerate}[label=\alph*)]
-
   \item
-        $728 = 2^3 \cdot 7 \cdot 13$ \\
-        Pruebo congruencia con $2^3$, 7 y 13.\\
-        $ 728 \divideA a^{27} - a^3
-          \entonces\\
+        Escribiendo la consigna como ecuación de congruencia:
+        $$
+          728 \divideA a^{27} - a^3
+          \Sii{def}
+          \congruencia{a^{27} - a^3}{0}{728}
+        $$
+        Reescribo al divisor como: $728 = 2^3 \cdot 7 \cdot 13$. Los primos son nuestros aliados en estos
+        ejercicios para poder usar PTF. Reescribo la ecuación a un sistema equivalente:
+        $$
+          \congruencia{a^{27} - a^3}{0}{728}
+          \leftrightsquigarrow
           \llave{l}{
-            2 \divideA a^{27} - a^3
-            \flecha{$2\noDivide a$}
-            \congruencia{(\ub{a}{\conga2 1})^{27} - (\ub{a}{\conga2 1})^3}{0}{2}
-            \entonces 2 \divideA a^{27} - a^3     \\
-            8 \divideA a^{27} - a^3
-            \sii
-            \llave{l}{
-              \congruencia{(2k)^{27} - (2k)^3}{0}{8}
-              \sii
-              \congruencia{2^3 \cdot (\ub{2^3}{ \conga8 0})^8 \cdot k^{27} - \ub{2^3}{\conga8 0} \cdot k^3}{0}{8}\Tilde
-              \\
-              3 \divideA a^{27} - a^3
-              \sii
-              \congruencia{3^{27} - 3^3}{0}{8}
-              \sii
-              \congruencia{(\ub{3^2}{\conga8 1})^{13} \cdot 3 - \ub{3^2}{\conga8 1} \cdot 3}{0}{8} \Tilde
-              \\
-              5 \divideA a^{27} - a^3
-              \sii
-              \congruencia{5^{27} - 5^3}{0}{8}
-              \sii
-              \congruencia{(\ub{5^2}{\conga8 1})^{13} \cdot 5 - \ub{5^2}{\conga8 1} \cdot 5}{0}{8} \Tilde
-              \\
-              7 \divideA a^{27} - a^3
-              \sii
-              \congruencia{7^{27} - 7^3}{0}{8}
-              \sii
-              \congruencia{(\ub{7}{\conga8 1})^{27} - \ub{7^3}{\conga8 1}}{0}{8} \Tilde
-            }
-            \\
-            7 \divideA a^{27} - a^3
-            \sii
-            \congruencia{a^{27}-a^3}{0}{7}
-            \flecha{7 primo}[caso $7 \noDivide a$]
-            \congruencia{a^{27}-a^3}{0}{7}
-            \sii
-            \congruencia{a^3 - a^3}{0}{7} \Tilde  \\
-            13 \divideA a^{27} - a^3
-            \sii
-            \congruencia{a^{27} - a^3}{0}{13}
-            \flecha{13 primo}[caso $13 \noDivide a$]
-            \congruencia{a^{27}-a^3}{0}{13}
-            \sii
-            \congruencia{a^3 - a^3}{0}{13} \Tilde \\
+            \congruencia{a^{27} - a^3}{0}{8} \llamada1 \\
+            \congruencia{a^{27} - a^3}{0}{7} \llamada2 \\
+            \congruencia{a^{27} - a^3}{0}{13} \llamada3
           }
-        $
-  \item \hacer
+        $$
+        Empiezo analizando $\llamada1$. Como el 8 no es primo, no se puede usar el PTF, así que lo
+        encaramos \textit{old style} con propiedades de exponentes y pensando que en congruencia módulo 8,
+        $r_8(a) \en \set{0,1,2,3,4,5,6,7}$:
+        A ver que pasa si $r_8(a)$ es par:
+        $$
+          \congruencia{
+            a^{27} - a^3
+            \igual{\red{!}}
+            (2k)^3 \cdot ( (2k)^{24} - 1 ) = 8k^3\cdot ( (2k)^{24} - 1 )
+          }{0}{8}
+        $$
+        Por lo que cuando $a$ es par, $\llamada1$ es válida. Ahora estudio los casos con $r_8(a)$ impar, que por
+        suerte no son muchos:
+        $$
+          \congruencia{a^{27} - a^3 = a^3\cdot (a^{24} - 1)}{0}{8} \Sii{\red{!!!}}
+          \llave{rc}{
+            \congruencia{1^3 \cdot (1^{24} - 1)}{0}{8} & \quad      \text{si } a = 1 \\
+            \congruencia{3^3\cdot(\magenta{9}^{12} - 1)}{0}{8}  & \quad  \text{si } a = 3     \\
+            \congruencia{5^3\cdot(\magenta{25}^{12} - 1)}{0}{8}  & \quad   \text{si } a = 5    \\
+            \congruencia{7^3\cdot(\magenta{49}^{12} - 1)}{0}{8}  & \quad   \text{si } a = 7
+          }
+        $$
+        Por lo que si $r_8(a)$ es impar, también mostramos que $\llamada1$ es válida:
+        $$
+          \congruencia{a^{27} - a^3}{0}{8} \paratodo a \en \enteros
+        $$
+
+        Ahora vienen casos más agradables (espero) con divisores primos que nos permiten usar el PTF.\par
+        Analizo $\llamada2$
+        $$
+          \congruencia{a^3 \cdot (a^{24} - 1)}{0}{7}
+          \sii
+          \llave{rc}{
+            \congruencia{0^3 \cdot (0^{24} - 1)}{0}{7}                            & \quad      \text{si } 7 \divideA a  \\
+            \Sii{PTF}[\red{!}]
+            \congruencia{a^3 \cdot (a^{\magenta{0}} - 1)}{0}{7} \sii \congruencia{0}{0}{7} & \quad      \text{si } 7 \noDivide a
+          }
+        $$
+        Por lo que $\llamada2$ se cumple para todo valor de $a$.
+
+        Analizo $\llamada3$ muuuy parecido:
+        $$
+          \congruencia{a^3 \cdot (a^{24} - 1)}{0}{13}
+          \sii
+          \llave{rc}{
+            \congruencia{0^3 \cdot (0^{24} - 1)}{0}{13}                             & \quad      \text{si } 13 \divideA a \\
+            \Sii{PTF}[\red{!}]
+            \congruencia{a^3 \cdot (a^{\magenta{0}} - 1)}{0}{13} \sii \congruencia{0}{0}{13} & \quad      \text{si } 7 \noDivide a
+          }
+        $$
+        Por lo que $\llamada3$ se cumple para todo valor de $a$.
+
+        Queda así demostrado que:
+        $$
+          \llave{l}{
+            \congruencia{a^{27} - a^3}{0}{8} \\
+            \congruencia{a^{27} - a^3}{0}{7} \\
+            \congruencia{a^{27} - a^3}{0}{13}
+          }
+          \leftrightsquigarrow
+          \congruencia{a^{27} - a^3}{0}{728}
+          \Sii{def}
+          728 \divideA a^{27} - a^3 \quad \paratodo a \en \enteros
+        $$
+
+  \item El enunciado puede pensarse como una ecuación de congruencia:
+        $$
+          \frac{2a^7}{35} + \frac{a}{7} - \frac{a^3}{5}  \en \enteros
+          \Sii{\red{!!}}
+          \congruencia{2a^7 + 5a - 7 a^3}{0}{35}
+        $$
+        Quizás conviene usar un sistema \textit{equivalente}, con divisored primos que nos permitan
+        usar el PTF:
+        $$
+          \congruencia{2a^7 + 5a - 7 a^3}{0}{35}
+          \leftrightsquigarrow
+          \llave{l}{
+            \congruencia{2a^7 + 5a - 7 a^3}{0}{7} \llamada1 \\
+            \congruencia{2a^7 + 5a - 7 a^3}{0}{5} \llamada2
+          }
+        $$
+        Empiezo por $\llamada1$:
+        $$
+          \congruencia{2a^7 + 5a - 7 a^3}{0}{7}
+          \sii
+          \congruencia{2a^7 + 5a}{0}{7} \sii
+          \llave{l}{
+            \text{si } 7 \divideA a  \entonces \congruencia{0}{0}{7} \\
+            \text{si } 7 \noDivide a  \Entonces{PTF}[\red{!}]
+            \congruencia{7a}{0}{7} \sii \congruencia{0}{0}{7}        \\
+          }
+        $$
+        De este último resultado, concluímos que no importa el valor de $a$, es decir:
+        $$
+          \congruencia{2a^7 + 5a - 7 a^3}{0}{7} \quad \paratodo a \en \enteros
+        $$
+        Ahora analizo $\llamada2$:
+        $$
+          \congruencia{2a^7 + 5a - 7 a^3}{0}{5}
+          \sii
+          \congruencia{2a^7 - 2a^3}{0}{5} \sii
+          \llave{l}{
+            \text{si } 5 \divideA a  \entonces \congruencia{0}{0}{5}   \\
+            \text{si } 5 \noDivide a  \Entonces{PTF}[\red{!}]
+            \congruencia{2a^3 - 2a^3}{0}{5} \sii \congruencia{0}{0}{5} \\
+          }
+        $$
+        Al igual que en el caso anterior, concluímos que no importa el valor de $a$, es decir:
+        $$
+          \congruencia{2a^7 + 5a - 7 a^3}{0}{5} \quad \paratodo a \en \enteros
+        $$
+
+        Se concluye entonces que la expresión:
+        $$
+          \congruencia{2a^7 + 5a - 7 a^3}{0}{35} \sii
+          \frac{2a^7}{35} + \frac{a}{7} - \frac{a^3}{5}  \en \enteros \paratodo a \en \enteros
+        $$
 \end{enumerate}
 
 \begin{aportes}
-\item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
 \end{aportes}
